fonsole/stg/fomage.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fomage
  labels:
    app: fomage
spec:
  replicas: 1
  selector:
    matchLabels:
      app: fomage
  template:
    metadata:
      name: fomage
      labels:
        app: fomage
    spec:
      containers:
        - name: fomage
          image: harbor.kigawa.net/library/fomage:main-0a4648f7bdfd043f2ff86e32a746424b72de61ad
          imagePullPolicy: IfNotPresent
          startupProbe:
            httpGet:
              port: 8080
              path: /health
          livenessProbe:
            httpGet:
              path: /health
              port: 8080
          ports:
            - containerPort: 8080
              protocol: TCP
      restartPolicy: Always
