fonsole/stg/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: fomage-ingress
spec:
  ingressClassName: haproxy
  rules:
    - host: fomage-stg.kigawa.net
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: fomage-svc
                port:
                  number: 8080
